# code-data-share-for-python

./: .gitignore  CMakeLists.txt  README.rst  bi.py  diff.sh  noxfile.py  perf.sh  pyproject.toml  requirements-dev.txt  setup.py
.devcontainer/: 3.12.Dockerfile  Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md
.github/workflows/: check.yml  nightly.yml  performance.yml  release.yml
docs/: TESTING.rst
scripts/: perf_import.ps1  perf_import.sh  pyperformance.ps1  pyperformance.sh
src/_cds/: _cdscontext.h  _cdsmodule.c  _cdsmodule.h  hashtable.c  hashtable.h  lookup_table.c  lookup_table.h  platforms.c  platforms.h  pythoncapi_compat.h  string_singletons.h
src/_cds/clinic/: _cdsmodule-b411.c.h  _cdsmodule.c.h
src/artifacts/: pycds.pth
src/cds/: __init__.py  _cds.pyi  dump.py
tests/: __init__.py
tests/benchmarks/: .gitignore  MANIFEST  base.toml
tests/benchmarks/bm_import/: bm_import_requests.toml  requirements.txt  run_benchmark.py
tests/benchmarks/bm_module_load_attr/: pyproject.toml  run_benchmark.py
tests/test_cds/: __init__.py  test_cds.py  test_dump.py  test_import.py
tests/test_cds_extension/: __init__.py  test_archive.py  test_base_extension.py  test_flags.py  test_share_object.py
tests/workspace/: mod1.py
tests/workspace/mod2/: mod2_1.py
tests/workspace/mod2/mod2_2/: __init__.py
