[project]
name = "code-data-share"
version = "0.0.4"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Operating System :: MacOS :: MacOS X',
    # 'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
]

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
skip = "*-musllinux*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

[tool.scikit-build]
wheel.packages = ["src/cds"]
